--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -90,7 +90,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
       </section>
     </main>
-
+    <div>footer</div>
     <footer>Footer</footer>
   </body>
 </html>
