--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -125,7 +125,14 @@
             <p>We like to know new people</p>
           </header>
           <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+            <p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene.
+  Quid enim est a Chrysippo praetermissum in Stoicis?
+  Pugnant Stoici cum Peripateticis.
+  Prioris generis est docilitas, memoria;
+  Apparet statim, quae sint officia, quae actiones.
+</p>
+
           </div>
         </div>
       </section>
