--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" href="./favicon.png">
   </head>
   <body>
+
+    <!-- Header scan code-->
     <header>
       <div>
         <span>Techium</span>
@@ -16,15 +18,18 @@
       </div>
     </header>
 
+    <!-- Scan code-->
     <main>
       <h1>Homepage</h1>
 
+      <!-- Hero -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
         </div>
       </section>
 
+      <!-- Services -->
       <section>
         <div>
           <header>
@@ -42,6 +47,7 @@
         </div>
       </section>
 
+      <!-- Works -->
       <section>
         <div>
           <header>
@@ -56,6 +62,7 @@
         </div>
       </section>
 
+      <!-- About Us -->
       <section>
         <div>
           <header>
@@ -75,6 +82,7 @@
         </div>
       </section>
 
+      <!-- Latest news -->
       <section>
         <div>
           <header>
@@ -123,6 +131,7 @@
         </div>
       </section>
 
+      <!-- Testimonials -->
       <section>
         <div>
           <header>
@@ -137,6 +146,7 @@
         </div>
       </section>
 
+      <!-- Contact -->
       <section>
         <div>
           <header>
@@ -150,6 +160,7 @@
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <div>Footer</div>
     </footer>
