--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <!-- Header scan code-->
+    <!-- Header to help with scanning your code -->
     <header>
       <div>
         <span>Techium</span>
@@ -18,18 +18,18 @@
       </div>
     </header>
 
-    <!-- Scan code-->
+    <!-- Main to help with scanning your code -->
     <main>
       <h1>Homepage</h1>
 
-      <!-- Hero -->
+      <!-- Hero section -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
         </div>
       </section>
 
-      <!-- Services -->
+      <!-- Services section -->
       <section>
         <div>
           <header>
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <!-- Works -->
+      <!-- Works section -->
       <section>
         <div>
           <header>
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <!-- About Us -->
+      <!-- About Us section -->
       <section>
         <div>
           <header>
@@ -82,7 +82,7 @@
         </div>
       </section>
 
-      <!-- Latest news -->
+      <!-- Latest news section -->
       <section>
         <div>
           <header>
@@ -131,7 +131,7 @@
         </div>
       </section>
 
-      <!-- Testimonials -->
+      <!-- Testimonials section -->
       <section>
         <div>
           <header>
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <!-- Contact -->
+      <!-- Contact section -->
       <section>
         <div>
           <header>
@@ -160,7 +160,7 @@
       </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer to help with scanning your code -->
     <footer>
       <div>Footer</div>
     </footer>
