--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,23 +9,23 @@
         <link rel="icon" href="./favicon.png" type="image/png">
     </head>
     <body>
-    <!-- Header section -->
+    <!-- Header -->
     <header>
         <div>
             <span>Techium</span>
             <nav></nav>
         </div>
     </header>
-    <!-- Main section -->
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero section -->
+        <!-- Hero Section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <!-- Services section -->
+        <!-- Services Section -->
         <section>
             <div>
                 <header>
@@ -43,7 +43,7 @@
 
             </div>
         </section>
-        <!-- Works section -->
+        <!-- Works Section -->
         <section>
             <div>
                 <header>
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </section>
-        <!-- About Us section -->
+        <!-- About Us Section -->
         <section>
             <div>
                 <header>
