--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -107,10 +107,11 @@
                     <p>
                         Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus
                         erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut.
-                        Cras nec quam sed sapien ultricies <mark>highlighted<aswe
+                        Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
+                    </p>
                 </div>
             </section>
-        </main>wsws
+        </main>
     	<footer></footer>
     </body>
 </html>
