--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -48,62 +48,23 @@
                 <li>
                     <a href="https://www.facebook.com/HolbertonSchool/">
                         <svg width="25px" height="25px" viewBox="0 0 24 24" fill="#0866FF" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24H12.82v-9.294H9.692V11.01h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.796.143v3.24h-1.918c-1.504 0-1.796.715-1.796 1.763v2.31h3.587l-.467 3.696h-3.12V24h6.116C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/>
+                            <path d="M23.998 12c0-6.628-5.372-12-11.999-12C5.372 0 0 5.372 0 12c0 5.988 4.388 10.952 10.124 11.852v-8.384H7.078v-3.469h3.046V9.356c0-3.008 1.792-4.669 4.532-4.669 1.313 0 2.686.234 2.686.234v2.953H15.83c-1.49 0-1.955.925-1.955 1.874V12h3.328l-.532 3.469h-2.796v8.384C19.61 22.952 23.998 17.988 23.998 12z"/>
                         </svg>
+
                     </a>
                 </li>
 
                 <li>
                     <a href="https://twitter.com/holbertonschool">
                         <svg width="25px" height="25px" viewBox="0 0 24 24" fill="#000000" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 
-                            1.014-.611 1.794-1.574 2.163-2.724
-                            -.951.564-2.005.974-3.127 1.195
-                            -.897-.957-2.178-1.555-3.594-1.555
-                            -2.723 0-4.928 2.206-4.928 4.928
-                            0 .39.045.765.127 1.124
-                            -4.094-.205-7.725-2.165-10.148-5.144
-                            -.424.722-.666 1.561-.666 2.475
-                            0 1.708.87 3.213 2.188 4.096
-                            -.807-.026-1.566-.247-2.228-.616v.061
-                            c0 2.385 1.693 4.374 3.946 4.827
-                            -.413.111-.849.171-1.296.171
-                            -.314 0-.615-.03-.916-.086
-                            .631 1.953 2.445 3.377 4.6 3.417
-                            -1.68 1.319-3.809 2.105-6.102 2.105
-                            -.39 0-.779-.023-1.17-.067
-                            2.189 1.394 4.768 2.209 7.557 2.209
-                            9.054 0 14-7.496 14-13.986
-                            0-.21 0-.423-.016-.637
-                            .962-.689 1.8-1.56 2.46-2.548z"/>
+                            <path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.724-.951.555-2.005.959-3.127 1.184a4.924 4.924 0 0 0-8.384 4.482C7.691 8.094 4.066 6.13 1.64 3.161a4.822 4.822 0 0 0-.666 2.475c0 1.71.873 3.213 2.188 4.096a4.904 4.904 0 0 1-2.228-.616v.061a4.923 4.923 0 0 0 3.946 4.827 4.996 4.996 0 0 1-2.212.085 4.937 4.937 0 0 0 4.604 3.417 9.868 9.868 0 0 1-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 0 0 7.557 2.209c9.054 0 14-7.496 14-13.986 0-.209 0-.42-.015-.63a9.936 9.936 0 0 0 2.46-2.548l-.047-.02z"/>
                         </svg>
                     </a>
                 </li>
-
                 <li>
                     <a href="https://www.instagram.com/holbertonschool/">
                         <svg width="25px" height="25px" viewBox="0 0 24 24" fill="#FF0069" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07
-                            1.366.062 2.633.343 3.608 1.318
-                            .975.975 1.256 2.242 1.318 3.608
-                            .058 1.266.069 1.646.069 4.841
-                            0 3.196-.011 3.575-.069 4.841
-                            -.062 1.366-.343 2.633-1.318 3.608
-                            -.975.975-2.242 1.256-3.608 1.318
-                            -1.266.058-1.646.069-4.85.069
-                            -3.204 0-3.584-.011-4.85-.069
-                            -1.366-.062-2.633-.343-3.608-1.318
-                            -.975-.975-1.256-2.242-1.318-3.608
-                            -.058-1.266-.069-1.645-.069-4.841
-                            0-3.195.011-3.575.069-4.841
-                            .062-1.366.343-2.633 1.318-3.608
-                            .975-.975 2.242-1.256 3.608-1.318
-                            1.266-.058 1.646-.07 4.85-.07z
-                            M12 5.838a6.162 6.162 0 1 0 0 12.324
-                            6.162 6.162 0 0 0 0-12.324z
-                            m0 10.162a4 4 0 1 1 0-8 4 4 0 0 1 0 8z
-                            m6.406-11.845a1.44 1.44 0 1 1-2.88 0
-                            1.44 1.44 0 0 1 2.88 0z"/>
+                            <path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.634 4.14c-.297.765-.499 1.636-.558 2.913C.015 8.333 0 8.74 0 12s.015 3.667.072 4.947c.059 1.277.261 2.148.558 2.913.306.789.717 1.459 1.384 2.126.667.667 1.337 1.078 2.126 1.384.765.297 1.636.499 2.913.558C8.333 23.985 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.059 2.148-.261 2.913-.558.789-.306 1.459-.717 2.126-1.384.667-.667 1.078-1.337 1.384-2.126.297-.765.499-1.636.558-2.913.057-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.059-1.277-.261-2.148-.558-2.913-.306-.789-.717-1.459-1.384-2.126-.667-.667-1.337-1.078-2.126-1.384-.765-.297-1.636-.499-2.913-.558C15.667.015 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.42.419.679.819.896 1.381.164.422.361 1.057.413 2.227.057 1.266.071 1.646.071 4.85s-.015 3.585-.071 4.85c-.055 1.17-.249 1.805-.413 2.227a3.81 3.81 0 0 1-.896 1.382 3.744 3.744 0 0 1-1.382.896c-.422.164-1.057.361-2.227.413-1.266.057-1.646.071-4.85.071s-3.585-.015-4.85-.071c-1.17-.055-1.805-.249-2.227-.413a3.716 3.716 0 0 1-1.381-.896 3.644 3.644 0 0 1-.896-1.382c-.164-.422-.361-1.057-.413-2.227-.057-1.266-.071-1.646-.071-4.85s.015-3.585.071-4.85c.055-1.17.249-1.805.413-2.227.217-.562.477-.96.896-1.382.419-.42.819-.679 1.381-.896.422-.164 1.057-.361 2.227-.413 1.266-.057 1.646-.071 4.85-.071zm0 3.678a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405a1.441 1.441 0 1 0-2.88 0 1.44 1.44 0 0 0 2.88 0z"/>
                         </svg>
                     </a>
                 </li>
